--- a/frontend_assignment/package.json
+++ b/frontend_assignment/package.json
@@ -23,7 +23,14 @@
         "assert": "^2.0.0",
         "next": "12.0.10",
         "react": "17.0.2",
-        "react-dom": "17.0.2"
+        "react-dom": "17.0.2",
+        "@emotion/react": "^11.9.0",
+        "@emotion/styled": "^11.8.1",
+        "@mui/material": "^5.8.1",
+        "yup": "^0.32.11",
+        "formik": "^2.2.9",
+        "@hookform/resolvers": "^2.8.10",
+        "react-hook-form": "^7.31.2"
     },
     "devDependencies": {
         "@appliedzkp/semaphore-contracts": "^0.8.0",
